--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,6 +4,7 @@ repos:
   hooks:
   - id: fmt
   - id: cargo-check
+  - id: clippy
 - repo: https://github.com/pre-commit/pre-commit-hooks
   rev: v4.5.0 # replace with a specific git tag or commit hash
   hooks:
