--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,13 +3,13 @@ repos:
   rev: v1.0 # replace with a specific git tag or commit hash
   hooks:
   - id: fmt
-#  - id: cargo-check
-#  - id: clippy
-#    args: ["--fix", "--allow-dirty"]
-#- repo: https://github.com/pre-commit/pre-commit-hooks
-#  rev: v4.5.0 # replace with a specific git tag or commit hash
-#  hooks:
-#  - id: check-toml
+  - id: cargo-check
+  - id: clippy
+    args: ["--fix", "--allow-dirty"]
+- repo: https://github.com/pre-commit/pre-commit-hooks
+  rev: v4.5.0 # replace with a specific git tag or commit hash
+  hooks:
+  - id: check-toml
 
 
 
