--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,6 +9,9 @@ repos:
 - repo: https://github.com/pre-commit/pre-commit-hooks
   rev: v4.5.0 # replace with a specific git tag or commit hash
   hooks:
+  - id: check-case-conflict
+  - id: check-merge-conflict
+  - id: check-vcs-permalinks
   - id: check-toml
   - id: check-yaml
   - id: check-added-large-files
