--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,6 +16,10 @@ repos:
   - id: check-yaml
   - id: check-added-large-files
     args: [ '--maxkb=1000' ]
+  - id: mixed-line-ending
+    args: [ '--fix=auto' ]
+  - id: no-commit-to-branch
+    args: [ '--branch', 'master' ]
 
 
 
