--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,20 +3,20 @@ repos:
   rev: v1.0 # replace with a specific git tag or commit hash
   hooks:
   - id: fmt
-#  - id: cargo-check
-#  - id: clippy
-#    args: ["--fix"]
-#- repo: https://github.com/pre-commit/pre-commit-hooks
-#  rev: v4.5.0 # replace with a specific git tag or commit hash
-#  hooks:
-#  - id: check-case-conflict
-#  - id: check-merge-conflict
-#  - id: check-vcs-permalinks
-#  - id: check-toml
-#  - id: check-yaml
-#  - id: check-added-large-files
-#    args: [ '--maxkb=1000' ]
-#  - id: mixed-line-ending
-#    args: [ '--fix=auto' ]
-#  - id: no-commit-to-branch
-#    args: [ '--branch', 'master' ]
+  - id: cargo-check
+  - id: clippy
+    args: ["--fix"]
+- repo: https://github.com/pre-commit/pre-commit-hooks
+  rev: v4.5.0 # replace with a specific git tag or commit hash
+  hooks:
+  - id: check-case-conflict
+  - id: check-merge-conflict
+  - id: check-vcs-permalinks
+  - id: check-toml
+  - id: check-yaml
+  - id: check-added-large-files
+    args: [ '--maxkb=1000' ]
+  - id: mixed-line-ending
+    args: [ '--fix=auto' ]
+  - id: no-commit-to-branch
+    args: [ '--branch', 'master' ]
