--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,7 +5,7 @@ repos:
   - id: fmt
   - id: cargo-check
   - id: clippy
-    args: ["--fix"]
+    args: ["--fix", "--allow-staged"]
 - repo: https://github.com/pre-commit/pre-commit-hooks
   rev: v4.5.0 # replace with a specific git tag or commit hash
   hooks:
